<resources>
    <string name="app_name">Trainer Clients</string>
    <string name="login_success">Login Successful</string>
    <string name="login_unsuccessful">Login Unsuccessful</string>
    <string name="user_name">jdoe</string>
    <string name="password">welcome1</string>
    <string name="customer_title">Customer Information</string>
    <string name="customer_name_hint">Enter Customer Name</string>
    <string name="customer_email_hint">Enter Email</string>
    <string name="customer_address_hint">Enter Address</string>
    <string name="customer_phone_hint">Enter Phone</string>
    <string name="customer_name">Client Name</string>
    <string name="new_customer">New Customer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
